idp2(Sandel): part 9

--- a/Гарвард.Справедливость.md
+++ b/Гарвард.Справедливость.md
@@ -1,6 +1,41 @@
 # Резюме просмотра курса Майкла Сэндела ["Справедливость"](https://www.youtube.com/playlist?list=PL8YZyma552VeTCYPkkEisHKAHhNx3Psk-)
 
-## 1. Моральная сторона убийства
+**Синопсис**
+
+Отличный обзорный курс лекций об истории развития современных позиций политической философии относительно вопросов кто такие люди, чем они отличаются от животных, какие у них есть права, как справедливо распределять блага.
+От утилитаризма до современных леволибералов.
+
+Далее следует мой конспект, цель которого быстро восстанавливать материал в памяти. Там, где у меня возникали мои соображения - записывал в отдельной секции.
+
+<!-- TOC -->
+
+- [V1. Моральная сторона убийства](#v1-%D0%BC%D0%BE%D1%80%D0%B0%D0%BB%D1%8C%D0%BD%D0%B0%D1%8F-%D1%81%D1%82%D0%BE%D1%80%D0%BE%D0%BD%D0%B0-%D1%83%D0%B1%D0%B8%D0%B9%D1%81%D1%82%D0%B2%D0%B0)
+    - [Вступление](#%D0%B2%D1%81%D1%82%D1%83%D0%BF%D0%BB%D0%B5%D0%BD%D0%B8%D0%B5)
+    - [Консеквенциальная теория морали и философия утилитаризма](#%D0%BA%D0%BE%D0%BD%D1%81%D0%B5%D0%BA%D0%B2%D0%B5%D0%BD%D1%86%D0%B8%D0%B0%D0%BB%D1%8C%D0%BD%D0%B0%D1%8F-%D1%82%D0%B5%D0%BE%D1%80%D0%B8%D1%8F-%D0%BC%D0%BE%D1%80%D0%B0%D0%BB%D0%B8-%D0%B8-%D1%84%D0%B8%D0%BB%D0%BE%D1%81%D0%BE%D1%84%D0%B8%D1%8F-%D1%83%D1%82%D0%B8%D0%BB%D0%B8%D1%82%D0%B0%D1%80%D0%B8%D0%B7%D0%BC%D0%B0)
+- [V2. Цена жизни](#v2-%D1%86%D0%B5%D0%BD%D0%B0-%D0%B6%D0%B8%D0%B7%D0%BD%D0%B8)
+    - [Постановка вопросов к учению Бентама](#%D0%BF%D0%BE%D1%81%D1%82%D0%B0%D0%BD%D0%BE%D0%B2%D0%BA%D0%B0-%D0%B2%D0%BE%D0%BF%D1%80%D0%BE%D1%81%D0%BE%D0%B2-%D0%BA-%D1%83%D1%87%D0%B5%D0%BD%D0%B8%D1%8E-%D0%B1%D0%B5%D0%BD%D1%82%D0%B0%D0%BC%D0%B0)
+    - [В чем измерять "удовольствие"](#%D0%B2-%D1%87%D0%B5%D0%BC-%D0%B8%D0%B7%D0%BC%D0%B5%D1%80%D1%8F%D1%82%D1%8C-%D1%83%D0%B4%D0%BE%D0%B2%D0%BE%D0%BB%D1%8C%D1%81%D1%82%D0%B2%D0%B8%D0%B5)
+- [V3. Свобода выбора](#v3-%D1%81%D0%B2%D0%BE%D0%B1%D0%BE%D0%B4%D0%B0-%D0%B2%D1%8B%D0%B1%D0%BE%D1%80%D0%B0)
+    - [Подход либертарианства](#%D0%BF%D0%BE%D0%B4%D1%85%D0%BE%D0%B4-%D0%BB%D0%B8%D0%B1%D0%B5%D1%80%D1%82%D0%B0%D1%80%D0%B8%D0%B0%D0%BD%D1%81%D1%82%D0%B2%D0%B0)
+    - [В чем измерять удовольствие](#%D0%B2-%D1%87%D0%B5%D0%BC-%D0%B8%D0%B7%D0%BC%D0%B5%D1%80%D1%8F%D1%82%D1%8C-%D1%83%D0%B4%D0%BE%D0%B2%D0%BE%D0%BB%D1%8C%D1%81%D1%82%D0%B2%D0%B8%D0%B5)
+- [V4. Это твоя земля, это моя земля](#v4-%D1%8D%D1%82%D0%BE-%D1%82%D0%B2%D0%BE%D1%8F-%D0%B7%D0%B5%D0%BC%D0%BB%D1%8F-%D1%8D%D1%82%D0%BE-%D0%BC%D0%BE%D1%8F-%D0%B7%D0%B5%D0%BC%D0%BB%D1%8F)
+    - [Джон Локк](#%D0%B4%D0%B6%D0%BE%D0%BD-%D0%BB%D0%BE%D0%BA%D0%BA)
+- [V5. Войска и матери по найму](#v5-%D0%B2%D0%BE%D0%B9%D1%81%D0%BA%D0%B0-%D0%B8-%D0%BC%D0%B0%D1%82%D0%B5%D1%80%D0%B8-%D0%BF%D0%BE-%D0%BD%D0%B0%D0%B9%D0%BC%D1%83)
+    - [Наемники](#%D0%BD%D0%B0%D0%B5%D0%BC%D0%BD%D0%B8%D0%BA%D0%B8)
+    - [Материнство на продажу](#%D0%BC%D0%B0%D1%82%D0%B5%D1%80%D0%B8%D0%BD%D1%81%D1%82%D0%B2%D0%BE-%D0%BD%D0%B0-%D0%BF%D1%80%D0%BE%D0%B4%D0%B0%D0%B6%D1%83)
+- [V6. Мотив имеет значение](#v6-%D0%BC%D0%BE%D1%82%D0%B8%D0%B2-%D0%B8%D0%BC%D0%B5%D0%B5%D1%82-%D0%B7%D0%BD%D0%B0%D1%87%D0%B5%D0%BD%D0%B8%D0%B5)
+    - [Главный принцип нравственности](#%D0%B3%D0%BB%D0%B0%D0%B2%D0%BD%D1%8B%D0%B9-%D0%BF%D1%80%D0%B8%D0%BD%D1%86%D0%B8%D0%BF-%D0%BD%D1%80%D0%B0%D0%B2%D1%81%D1%82%D0%B2%D0%B5%D0%BD%D0%BD%D0%BE%D1%81%D1%82%D0%B8)
+- [V7. Как правильно врать](#v7-%D0%BA%D0%B0%D0%BA-%D0%BF%D1%80%D0%B0%D0%B2%D0%B8%D0%BB%D1%8C%D0%BD%D0%BE-%D0%B2%D1%80%D0%B0%D1%82%D1%8C)
+    - [Общественный договор](#%D0%BE%D0%B1%D1%89%D0%B5%D1%81%D1%82%D0%B2%D0%B5%D0%BD%D0%BD%D1%8B%D0%B9-%D0%B4%D0%BE%D0%B3%D0%BE%D0%B2%D0%BE%D1%80)
+- [V8. Каждому по возможностям](#v8-%D0%BA%D0%B0%D0%B6%D0%B4%D0%BE%D0%BC%D1%83-%D0%BF%D0%BE-%D0%B2%D0%BE%D0%B7%D0%BC%D0%BE%D0%B6%D0%BD%D0%BE%D1%81%D1%82%D1%8F%D0%BC)
+    - [Теории справедливого распределения](#%D1%82%D0%B5%D0%BE%D1%80%D0%B8%D0%B8-%D1%81%D0%BF%D1%80%D0%B0%D0%B2%D0%B5%D0%B4%D0%BB%D0%B8%D0%B2%D0%BE%D0%B3%D0%BE-%D1%80%D0%B0%D1%81%D0%BF%D1%80%D0%B5%D0%B4%D0%B5%D0%BB%D0%B5%D0%BD%D0%B8%D1%8F)
+- [V9. Как правильно дискриминировать](#v9-%D0%BA%D0%B0%D0%BA-%D0%BF%D1%80%D0%B0%D0%B2%D0%B8%D0%BB%D1%8C%D0%BD%D0%BE-%D0%B4%D0%B8%D1%81%D0%BA%D1%80%D0%B8%D0%BC%D0%B8%D0%BD%D0%B8%D1%80%D0%BE%D0%B2%D0%B0%D1%82%D1%8C)
+    - [Рассуждение от цели](#%D1%80%D0%B0%D1%81%D1%81%D1%83%D0%B6%D0%B4%D0%B5%D0%BD%D0%B8%D0%B5-%D0%BE%D1%82-%D1%86%D0%B5%D0%BB%D0%B8)
+
+<!-- /TOC -->
+
+## V1. Моральная сторона убийства
+
 ### Вступление
 
 Лектор приводит умозрительные примеры:
@@ -49,7 +84,7 @@
 Не могу не отметить то, что для иллюстрации разницы различных философских теорий здесь было бы полезно вспомнить [абсолютно аналогичный случай, но с противоположным исходом](https://ru.wikipedia.org/wiki/%D0%94%D1%80%D0%B5%D0%B9%D1%84_%D1%81%D0%B0%D0%BC%D0%BE%D1%85%D0%BE%D0%B4%D0%BD%D0%BE%D0%B9_%D0%B1%D0%B0%D1%80%D0%B6%D0%B8_%D0%A2-36).
 ***
 
-## 2. Цена жизни
+## V2. Цена жизни
 
 ### Постановка вопросов к учению Бентама
 
@@ -91,7 +126,7 @@
 
 Милль: "Справедливость - это совокупность требований морали, более высоких для общества в целом, с точки зрения пользы, а значит, и претендующих на обязательность сильнее, чем остальные".
 
-## 3. Свобода выбора
+## V3. Свобода выбора
 
 ### Подход либертарианства
 
@@ -176,7 +211,7 @@
 
 ***
 
-## 4. Это твоя земля, это моя земля
+## V4. Это твоя земля, это моя земля
 
 ### [Джон Локк](https://ru.wikipedia.org/wiki/%D0%9B%D0%BE%D0%BA%D0%BA,_%D0%94%D0%B6%D0%BE%D0%BD)
 
@@ -218,7 +253,7 @@
 
 Фундаментальный вопрос: что дает согласие?
 
-## 5. Войска и матери по найму
+## V5. Войска и матери по найму
 
 ### Наемники
 
@@ -241,6 +276,7 @@
 Лично я полностью поддерживаю аргумент 2. И более того, я расширил бы его: считаю, что гражданином общества, может считать только тот, кто готов пойти на военную службу и проливать свою кровь во благо этого общества.
 
 ***
+
 ### Материнство на продажу
 
 Стоит ли разрешать\запрещать рынок яйцеклеток\спермы?
@@ -248,7 +284,7 @@
 1. неинформированное согласие (будущая мать не могла знать, что почуствует к ребенку, т.е. какую ценность он для нее представит)
 2. договор о передаче ребенка ведет к дегумманизации - фактически, ребенок становится товаром
 
-## 6. Мотив имеет значение
+## V6. Мотив имеет значение
 
 [Иммануил Кант](https://ru.wikipedia.org/wiki/%D0%9A%D0%B0%D0%BD%D1%82,_%D0%98%D0%BC%D0%BC%D0%B0%D0%BD%D1%83%D0%B8%D0%BB)
 
@@ -305,7 +341,7 @@
 3. совершать всё, исходя из максимы своей воли как такой, которая могла бы также иметь предметом самое себя как волю, устанавливающую всеобщие законы
 
 
-## 7. Как правильно врать
+## V7. Как правильно врать
 
 Как возможен категорический императив, как возможна мораль?
 Мораль строится не на опыте - чтобы мы ни видели вокруг себя, чтобы ни говорила наука, мы не выводим из этого напрямую моральный закон.
@@ -328,7 +364,7 @@
 По Роулзу справедливость договора возможна в условиях равенства сторон, которое создаст [занавес неведения](https://ru.wikipedia.org/wiki/%D0%97%D0%B0%D0%BD%D0%B0%D0%B2%D0%B5%D1%81_%D0%BD%D0%B5%D0%B2%D0%B5%D0%B4%D0%B5%D0%BD%D0%B8%D1%8F). Это гипотетический договор.
 
 
-## 8. Каждому по возможностям
+## V8. Каждому по возможностям
 
 По каким понятиям делить блага?
 
@@ -369,5 +405,40 @@
 Это в общем о распределении благ. В частности, можно вспомнить какая доступность качественного образования была в СССР.
 
 Для меня очевидно, что с тех пор, как производство стало носить общественный характер, не может быть справедливого распределения благ при частном характере присвоения плодов производства.
+
+***
+
+## V9. Как правильно дискриминировать
+
+Должно ли справедливое распределение зависить от наших заслуг?
+
+Аргументы за позитивную дискриминацию:
+1. коррекция различий в уже полученном образовании
+2. компенсация исторической несправедливости
+3. необходимо разнообразие (например, этническое) ради образовательного опыта
+
+Но разве правильно заставлять жертвовать Шерил Хопвуд чем-то из-зна неких условных злодеяний совершенных пару сотен лет назад и к которым она не имеет отношения? Для ответа на этот вопрос надо выяснить, существуют ли некие групповые права и групповые права и ответственность.
+
+### Рассуждение от цели
+
+Похоже, что начиная Кантом и заканчивая Ролзом, можно сказать, что справедливое распределение не должно зависеть от заслуг.
+
+Однако стоит посмотреть на этот вопрос с противоположных современной философии позиций - с позиций Аристотеля.
+Справедливое распределение по Аристотелю: людям должно достоваться ровно то, что эти люди заслужили.
+
+*Справедливость сопряжена с двумя факторами - благами и людьми, которым предназначаются эти блага. В общем, мы говорим, что равные люди должны получать и равные блага*
+
+Вопрос в том, как определяется равенство? Это зависит от того, какие блага распределяются. Например, если мы распределяем флейты, то самая лучшая флейта должно быть отдана тому, кто лучше всего играет (а не, например, самому красивому). Потому что задача флейты - играть, а потому флейта и должна быть отдана только тому, кто лучше выполнит эту задачу.
+
+Т.е. надо смотреть на итог, цель - **телеологическая аргументация**.
+
+Весть вопрос позитивной дискриминации из примера с Шерил Хопвуд сводится к вопросу о цели университетского образования.
+
+***
+*Мои заметки*
+
+Очень странно, что пример с положительной дискриминацией лектор не распространил дальше на трудовые отношения: что будет, если на кардиохирургов также будет квота по национальному признаку, а не по умению?
+
+Например, в IT это уже не умозрительный эксперимент, а [реальность](https://www.rbc.ru/rbcfreenews/5a98f7959a79477c0637779b/?utm_source=amp_textincutes).
 
 ***
